--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Sunil's Portfolio</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Sunil's Portfolio</span><br />
 									<span class="subtitle">Creative Designer</span>
 								</a>
 
