--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Sunil's Portfolio</span><br />
-									<span class="subtitle">Creative Designer</span>
+								    <div>
+								        <img src="images/logo.svg" alt="" />
+								    </div>
+								    <div>
+								        <span class="title">Sunil's Portfolio</span><br />
+								        <span class="subtitle">Your Subtitle Here</span> <!-- New line added -->
+								    </div>
 								</a>
+
 
 							<!-- Nav -->
 								<nav>
