--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								    </div>
 								    <div>
 								        <span class="title">Sunil's Portfolio</span><br />
-								        <span class="subtitle">Your Subtitle Here</span> <!-- New line added -->
+								        <span class="subtitle">Embedded | C/C++ | Python Developer</span> <!-- New line added -->
 								    </div>
 								</a>
 
@@ -47,7 +47,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
+							<li><a href="generic.html">About Me</a></li>
 							<li><a href="generic.html">Tempus etiam</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
